--- a/index.html
+++ b/index.html
@@ -80,44 +80,45 @@
           <li><a class="dropdown-item" href="#">MEAN Stack</a></li>
         </ul>
       </div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-5">
           <a class="nav-link active text-warning" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Courses</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Teachers</a>
-            </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Courses</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Teachers</a>
+          </li>
 
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                Blog
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-          <button class="btn btn-outline-success px-3 px-sm-3 py-1" type="submit">Join Now</button>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              Blog
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li>
+                <hr class="dropdown-divider" />
+              </li>
+              <li>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+        <button class="btn btn-outline-success px-3 px-sm-3 py-1" type="submit">Join Now</button>
       </div>
     </div>
   </nav>
@@ -213,7 +214,7 @@
 
   <!-- Courses Section Starts Here  -->
 
-  <div class="courses container mt-md-5">
+  <div class="courses container mt-md-5 mt-sm-5">
     <div class="heading">
       <h5>Courses</h5>
       <h1>Our Popular Courses</h1>
@@ -221,7 +222,7 @@
 
     <!-- Course Row 1 -->
     <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <div class="card">
           <img src="images/course-1.jpg" class="card-img-top" alt="course1" />
           <div class="card-body position-relative">
@@ -240,7 +241,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <div class="card">
           <img src="images/course-2.jpg" class="card-img-top" alt="course2" />
           <div class="card-body position-relative">
@@ -259,7 +260,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <div class="card">
           <img src="images/course-3.jpg" class="card-img-top" alt="course3" />
           <div class="card-body position-relative">
@@ -282,7 +283,7 @@
 
     <!-- Course Row 2 -->
     <div class="row row-cols-1 row-cols-md-3 g-4 mt-3">
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <div class="card">
           <img src="images/course-4.jpg" class="card-img-top" alt="course4" />
           <div class="card-body position-relative">
@@ -301,7 +302,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <div class="card">
           <img src="images/course-5.jpg" class="card-img-top" alt="course5" />
           <div class="card-body position-relative">
@@ -320,7 +321,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <div class="card">
           <img src="images/course-6.jpg" class="card-img-top" alt="course6" />
           <div class="card-body position-relative">
@@ -346,11 +347,11 @@
 
   <!-- Sign-Up Section Starts  -->
 
-  <div class="sign-up container-fluid mt-md-5 d-flex justify-content-center align-items-center">
+  <div class="sign-up container-fluid mt-md-5 mt-sm-5">
     <div class="container">
       <div class="row">
         <!-- Sign-Up Column 1 -->
-        <div class="sign-up-col1 col-6">
+        <div class="sign-up-col1 col-md-6 col-sm-12">
           <h5>need any courses</h5>
           <h1>30% Off For New Students</h1>
           <p>
@@ -377,17 +378,17 @@
           </div>
         </div>
         <!-- Sign-Up Column 2 -->
-        <div class="sign-up-col2 col-6">
-          <div class="form-label rounded-top">Sign Up Now</div>
-          <form class="rounded-bottom">
-            <div class="mb-3 col-8">
+        <div class="sign-up-col2 col-md-6 col-sm-12">
+          <div class="form-label rounded-top p-sm-0">Sign Up Now</div>
+          <form class="form-bottom rounded-bottom col-sm-10">
+            <div class="mb-3 col-8 col-sm-12">
               <input type="email" class="form-control" placeholder="Your name" id="exampleInputEmail1"
                 aria-describedby="emailHelp" />
             </div>
-            <div class="mb-3 col-8">
+            <div class="mb-3 col-8 col-sm-12">
               <input type="password" class="form-control" placeholder="Your email" id="exampleInputPassword1" />
             </div>
-            <div class="mb-3 col-8">
+            <div class="mb-3 col-8 col-sm-12">
               <select id="inputState" class="form-select">
                 <option selected>Select a course</option>
                 <option>MERN Stack</option>
@@ -398,7 +399,7 @@
                 <option>Digital Marketing</option>
               </select>
             </div>
-            <button type="submit" class="btn btn-primary col-8">
+            <button type="submit" class="btn btn-primary col-8 col-sm-6">
               Sign Up Now
             </button>
           </form>
@@ -416,8 +417,8 @@
       <h1>Meet Our Teachers</h1>
 
       <div class="teacher-content row">
-        <div class="col-md-3 col-sm-12">
-          <div class="card" style="width: 16rem">
+        <div class="col-md-3 col-sm-12 mt-sm-2">
+          <div class="card">
             <img src="images/team-1.jpg" class="card-img-top" alt="Team1" />
             <div class="card-body">
               <h6 class="card-text">Jhon Doe</h6>
@@ -425,8 +426,8 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 col-sm-12">
-          <div class="card" style="width: 16rem">
+        <div class="col-md-3 col-sm-12 ">
+          <div class="card mt-sm-2">
             <img src="images/team-2.jpg" class="card-img-top" alt="team-2" />
             <div class="card-body">
               <h6 class="card-text">Jhon Doe</h6>
@@ -435,7 +436,7 @@
           </div>
         </div>
         <div class="col-md-3 col-sm-12">
-          <div class="card" style="width: 16rem">
+          <div class="card">
             <img src="images/team-3.jpg" class="card-img-top" alt="team-3" />
             <div class="card-body rounded-bottom">
               <h6 class="card-text">Jhon Doe</h6>
@@ -444,7 +445,7 @@
           </div>
         </div>
         <div class="col-md-3 col-sm-12">
-          <div class="card" style="width: 16rem">
+          <div class="card">
             <img src="images/team-4.jpg" class="card-img-top" alt="team-4" />
             <div class="card-body">
               <h6 class="card-text">Jhon Doe</h6>
@@ -462,7 +463,7 @@
   <div class="testimonial container mt-5 text-center">
     <div class="row">
       <div class="col-2"></div>
-      <div class="col-8">
+      <div class="col-8 col-sm-12">
         <div class="heading">
           <h5>testimonial</h5>
           <h1>What Say Our Students</h1>
@@ -501,15 +502,15 @@
       <h1>Meet Our Teachers</h1>
     </div>
     <div class="blog-row row mt-5">
-      <div class="blog1 col-4 rounded-3">
+      <div class="blog1 col-md-4 col-sm-12 rounded-3">
         <h4>Web development Tools to Increase</h4>
         <p>Jan 01, 2022</p>
       </div>
-      <div class="blog2 col-4 rounded-3">
+      <div class="blog2 col-md-4 col-sm-12 rounded-3">
         <h4>How to Become frontend developer in 2022</h4>
         <p>Jan 01, 2022</p>
       </div>
-      <div class="blog3 col-4 rounded-3">
+      <div class="blog3 col-md-4 col-sm-12 rounded-3">
         <h4>ReactJS Development Training</h4>
         <p>Jan 01, 2022</p>
       </div>
@@ -521,84 +522,95 @@
   <!-- Footer Code starts here  -->
 
   <div class="footer container-fluid mt-5">
-    <div class="footer1 row">
-      <div class="col-7">
+    <div class="row">
+      <div class="col-md-12 col-sm-12">
         <div class="logo text-center">
           <img src="images/AIT-white.jpg" alt="ait-logo" />
         </div>
+      </div>
+    </div>
 
-        <div class="about-ait mt-5">
-          <div class="col-6 address">
-            <h4>get in touch</h4>
-            <div class="mt-3"><i class="fa-solid fa-location-dot"></i>
-            <p>#63, 1st Floor, 16th Main, 8th Cross BTM, 1st Stage BTM Layout,
-              Bengaluru, Karnataka 560029
-            </p></div>
+    <div class="row footer1 mt-3">
 
-            <div class="mt-3"><i class="fa-solid fa-phone-flip"></i>
-            <p>+91 8431-040-457</p></div>
+      <div class="col-md-4 col-sm-12 address">
+        <h4>get in touch</h4>
+        <div class="mt-3"><i class="fa-solid fa-location-dot"></i>
+          <p>#63, 1st Floor, 16th Main, 8th Cross BTM, 1st Stage BTM Layout,
+            Bengaluru, Karnataka 560029
+          </p>
+        </div>
 
-            <div class="mt-3"><i class="fa-solid fa-envelope"></i>
-            <p>info@achiversit.com</p></div>
+        <div class="mt-3"><i class="fa-solid fa-phone-flip"></i>
+          <p>+91 8431-040-457</p>
+        </div>
 
-            
+        <div class="mt-3"><i class="fa-solid fa-envelope"></i>
+          <p>info@achiversit.com</p>
+        </div>
 
-            <div class="mt-3"><i class="fa-brands fa-square-twitter"></i>
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-square-instagram"></i></div>
-          </div>
-          <div class="col-5 courses mb-5">
-            <h4>our courses</h4>
 
-            <div class="mt-3"><i class="fa-solid fa-angle-right"></i>
-            <p>Web Design</p></div>
-            <div class="mt-2"><i class="fa-solid fa-angle-right"></i>
-            <p>Apps Design</p></div>
-            <div class="mt-2"><i class="fa-solid fa-angle-right"></i>
-            <p>Digital Marketing</p></div>
-           <div class="mt-2"> <i class="fa-solid fa-angle-right"></i>
-            <p>Full Stack Development</p></div>
-            <div class="mt-2"><i class="fa-solid fa-angle-right"></i>
-            <p>Search Engine Optimization</p></div>
-          </div>
+
+        <div class="mt-3"><i class="fa-brands fa-square-twitter"></i>
+          <i class="fa-brands fa-square-facebook"></i>
+          <i class="fa-brands fa-linkedin"></i>
+          <i class="fa-brands fa-square-instagram"></i>
         </div>
       </div>
-      <div class="news col-5 pe-5">
+      <div class="col-md-3 col-sm-12 courses mb-5">
+        <h4>our courses</h4>
+
+        <div class="mt-3"><i class="fa-solid fa-angle-right"></i>
+          <p>Web Design</p>
+        </div>
+        <div class="mt-2"><i class="fa-solid fa-angle-right"></i>
+          <p>Apps Design</p>
+        </div>
+        <div class="mt-2"><i class="fa-solid fa-angle-right"></i>
+          <p>Digital Marketing</p>
+        </div>
+        <div class="mt-2"> <i class="fa-solid fa-angle-right"></i>
+          <p>Full Stack Development</p>
+        </div>
+        <div class="mt-2"><i class="fa-solid fa-angle-right"></i>
+          <p>Search Engine Optimization</p>
+        </div>
+      </div>
+
+      <div class="news col-md-5 col-sm-12 pe-5">
         <h4>news letter</h4>
         <p>We, AchiversIT here to assist you gaining the best deal of knowledge and landing at your dream job.
-          Fresher or experienced, we always have a hope to hop into new domains and fields to quicken up the pace 
+          Fresher or experienced, we always have a hope to hop into new domains and fields to quicken up the pace
           in our career growth. AchiversIT dedicated to its services to enhance your skills to make a better move
           towards a better future in your career.</p>
 
-          <form class="row d-flex">
-            <div class="col-8 pe-0">
-              <input type="email" class="form-control" placeholder="Your Email Address" id="exampleInputEmail1"
-                aria-describedby="emailHelp" />
-            </div>
-            <div class="col-4 ps-0">
-              <button type="submit" class="btn btn-primary">Sign Up</button>
-            </div>
-          </form>
+        <form class="row mt-3">
+          <div class="col-md-8 col-sm-8 pe-0">
+            <input type="email" class="form-control" placeholder="Your Email Address" id="exampleInputEmail1"
+              aria-describedby="emailHelp" />
+          </div>
+          <div class="col-md-4 col-sm-8 ps-0">
+            <button type="submit" class="btn btn-primary col-sm-12" id="footer-signup">Sign Up</button>
+          </div>
+        </form>
       </div>
     </div>
-    
     <hr class="bg-light">
-    <div class="footer2 row">
-      <div class="col-6">
-        <p>Copyright @ 2022 <span style="color: orange;">AchiversIT</span> All Rights Reserved. Designed by <span style="color: orange;">AchiversIT</span></p>
-      </div>
-      <div class="col-2"></div>
-      <div class="col-4">
-        <ul>
-          <li>Privacy</li>
-          <li>Terms</li>
-          <li>Refund Policy</li>
-          <li>Help</li>
-        </ul>
-      </div>
+  <div class="footer2 row">
+    <div class="col-md-6 col-sm-12">
+      <p>Copyright @ 2022 <span style="color: orange;">AchiversIT</span> All Rights Reserved. Designed by <span
+          style="color: orange;">AchiversIT</span></p>
+    </div>
+    <div class="col-2"></div>
+    <div class="col-md-4 col-sm-12">
+      <ul>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>Refund Policy</li>
+        <li>Help</li>
+      </ul>
     </div>
   </div>
+</div>
 
   <!-- Footer Code ends  here  -->
 
