--- a/index.html
+++ b/index.html
@@ -104,14 +104,11 @@
               Blog
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <hr class="dropdown-divider" />
-              </li>
-              <li>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </li>
+              <li><a class="dropdown-item" href="#">Institute</a></li>
+              <li><a class="dropdown-item" href="#">Faculty</a></li>
+              <li><a class="dropdown-item" href="#">Courses</a></li>
+              <li><a class="dropdown-item" href="#">Intership</a></li>
+              <li><a class="dropdown-item" href="#">Placement</a></li>
             </ul>
           </li>
           <li class="nav-item">
