--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </div>
 
     <!-- Course Row 1 -->
-    <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="Course-row1 row row-cols-1 row-cols-md-3 g-4">
       <div class="col-md-4 col-sm-12">
         <div class="card">
           <img src="images/course-1.jpg" class="card-img-top" alt="course1" />
@@ -279,7 +279,7 @@
     </div>
 
     <!-- Course Row 2 -->
-    <div class="row row-cols-1 row-cols-md-3 g-4 mt-3">
+    <div class="Course-row2 row row-cols-1 row-cols-md-3 g-4 mt-3">
       <div class="col-md-4 col-sm-12">
         <div class="card">
           <img src="images/course-4.jpg" class="card-img-top" alt="course4" />
@@ -553,7 +553,7 @@
           <i class="fa-brands fa-square-instagram"></i>
         </div>
       </div>
-      <div class="col-md-3 col-sm-12 courses mb-5">
+      <div class="col-md-3 col-sm-12 courses mb-5 mt-sm-3">
         <h4>our courses</h4>
 
         <div class="mt-3"><i class="fa-solid fa-angle-right"></i>
@@ -581,8 +581,8 @@
           towards a better future in your career.</p>
 
         <form class="row mt-3">
-          <div class="col-md-8 col-sm-8 pe-0">
-            <input type="email" class="form-control" placeholder="Your Email Address" id="exampleInputEmail1"
+          <div class="col-md-8 col-sm-12 pe-0">
+            <input type="email" class="form-control email-bottom" placeholder="Your Email Address" id="exampleInputEmail1"
               aria-describedby="emailHelp" />
           </div>
           <div class="col-md-4 col-sm-8 ps-0">
