--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/about-style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap" rel="stylesheet" />
@@ -18,9 +18,7 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
   <title>AchiversIT</title>
-  <script src="/path/to/cdn/jquery.min.js"></script>
 
-  <script src="./index.js"></script>
 
 </head>
 
@@ -132,255 +130,48 @@
 
   <!-- Header section  Ends here -->
 
-  <!-- background sliding part starts  -->
+  <!-- About Page background Image Section Starts Here -->
 
-  <div id="carouselExampleIndicators" class="carousel myslide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="images/carousel-1.jpg" class="d-block w-100" alt="Caurosel-Img3">
-        <div class="myslide-caption">
-          <h3>best course<h3/>
-          <h1>React Development Course</h1>
-          <a href="#">Learn More</a>
+    <div class="container-fluid about-bg">
+        <div class="about-background-img">
+            <h1>about</h1>
+            <a href="index.html">home</a><i class="fa-solid fa-angles-right"></i><a href="about.html">about</a>
         </div>
-      </div>
-      <div class="carousel-item">
-        <img src="images/carousel-2.jpg" class="d-block w-100" alt="Caurosel-Img3">
-           <div class="myslide-caption">
-            <h3>best course<h3/>
-            <h1>Full Stack Development Course</h1>
-            <a href="#">Learn More</a>
+    </div>  
+  <!-- About Page background Image Section Ends Here -->
+
+    <!-- About Us Part -->
+
+    <div class="about-us container">
+        <div class="about row">
+          <div class="image-body col-lg-3 col-md-6 col-sm-12">
+            <img src="images/blog-1.jpg" alt="Blog1" />
           </div>
-      </div>
-      <div class="carousel-item">
-        <img src="images/carousel-3.jpg" class="d-block w-100" alt="Caurosel-Img3">
-        <div class="myslide-caption">
-          <h3>best course<h3/>
-          <h1>Web Development Course</h1>
-          <a href="#">Learn More</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- background sliding ends here  -->
-
-
-  <!-- About Us Part -->
-
-  <div class="about-us container">
-    <div class="about row">
-      <div class="image-body col-lg-3 col-md-6 col-sm-12">
-        <img src="images/blog-1.jpg" alt="Blog1" />
-      </div>
-      <div class="caption-part col-lg-6 col-md-6 col-sm-12">
-        <div class="card-body">
-          <h5>About US</h5>
-          <h1>Innovative Way To Learn</h1>
-          <p>
-            AchiversIT - Provides a wide group of opportunities for freshers
-            an experienced candidate who can develop thier skills and built
-            their career opportunities across multiple compnanies.
-          </p>
-          <button class="btn px-3 py-1 mt-4" type="submit">
-            Learn More
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- about us ends here  -->
-
-  <div id="sticky-btn">
-    <a href="#Header-Block" class="Pageup-btn-link"><i class="fa-solid fa-angles-up Pageup-btn"></i></a>
-  </div>
-
-  <!-- Subjects Section starts from here -->
-  <div class="subjects container-md mt-md-5 mt-5 mt-sm-5">
-    <h5>Subjects</h5>
-    <h1>Trending Courses</h1>
-
-    <div class="subject-row1 row">
-      <div class="sub1 col-lg-12 col-md-3 col-sm-12 rounded-3 pt-md-5">
-        <h4>Web Design</h4>
-        <p>Courses</p>
-      </div>
-      <div class="sub2 col-lg-12 col-md-3 col-sm-12 rounded-3 pt-md-5">
-        <h4>Front End Development</h4>
-        <p>Courses</p>
-      </div>
-      <div class="sub3 col-lg-12 col-md-3 col-sm-12 rounded-3 pt-md-5">
-        <h4>Game Design</h4>
-        <p>Courses</p>
-      </div>
-      <div class="sub4 col-lg-12 col-md-3 col-sm-12 rounded-3 pt-md-5">
-        <h4>Apps Design</h4>
-        <p>Courses</p>
-      </div>
-    </div>
-
-    <div class="subject-row2 row">
-      <div class="sub5 col-lg-12 col-md-3 col-sm-12 rounded-3 pt-md-5">
-        <h4>Digital Marketing</h4>
-        <p>Courses</p>
-      </div>
-      <div class="sub6 col-lg-12 col-md-3 col-sm-12 rounded-3 pt-md-5">
-        <h4>MEAN Stack Development</h4>
-        <p>Courses</p>
-      </div>
-      <div class="sub7 col-lg-12 col-md-3 col-sm-12 rounded-3 pt-md-5">
-        <h4>Web Development</h4>
-        <p>Courses</p>
-      </div>
-      <div class="sub8 col-lg-12 col-md-3 col-sm-12 rounded-3 pt-md-5">
-        <h4>React Development</h4>
-        <p>Courses</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Subject Section Ends Here  -->
-
-  <!-- Courses Section Starts Here  -->
-
-  <div class="courses container mt-md-5 mt-sm-5">
-    <div class="heading">
-      <h5>Courses</h5>
-      <h1>Our Popular Courses</h1>
-    </div>
-
-    <!-- Course Row 1 -->
-    <div class="Course-row1 row row-cols-1 row-cols-md-3 g-4">
-      <div class="col-md-4 col-sm-12">
-        <div class="card">
-          <img src="images/course-1.jpg" class="card-img-top" alt="course1" />
-          <div class="card-body position-relative">
-            <i class="fa-solid fa-users position-absolute start-10 top-10"></i><span class="ps-4 text-warning"><small>25
-                Students</small></span>
-            <i class="fa-solid fa-clock position-absolute top-10 end-0"><span class="text-muted"
-                style="font-size: 10px; color: aquamarine; margin-left: 5px">01h 30m</span></i>
-            <p class="card-text">
-              Web Design & Development Courses for beginner
-            </p>
-            <hr />
-            <i class="fa-solid fa-star position-absolute start-10 bottom-0 pb-4 "><span
-                style="font-size: 12px; color: fuchsia">4.5(250)</span></i>
-            <i class="fa-solid fa-dollar-sign position-absolute end-0 bottom-0 pb-4"><span
-                style="font-size: 15px; color: #75175e">99</span></i>
+          <div class="caption-part col-lg-6 col-md-6 col-sm-12">
+            <div class="card-body">
+              <h5>About US</h5>
+              <h1>Innovative Way To Learn</h1>
+              <p>
+                AchiversIT - Provides a wide group of opportunities for freshers
+                an experienced candidate who can develop thier skills and built
+                their career opportunities across multiple compnanies.
+              </p>
+              <button class="btn px-3 py-1 mt-4" type="submit">
+                Learn More
+              </button>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-md-4 col-sm-12">
-        <div class="card">
-          <img src="images/course-2.jpg" class="card-img-top" alt="course2" />
-          <div class="card-body position-relative">
-            <i class="fa-solid fa-users position-absolute start-10 top-10"></i><span class="ps-4 text-warning"><small>25
-                Students</small></span>
-            <i class="fa-solid fa-clock position-absolute top-10 end-0"><span class="text-muted"
-                style="font-size: 10px; color: aquamarine; margin-left: 5px">01h 30m</span></i>
-            <p class="card-text">
-              Web Design & Development Courses for beginner
-            </p>
-            <hr />
-            <i class="fa-solid fa-star position-absolute start-10 bottom-0 pb-4"><span
-                style="font-size: 12px; color: fuchsia">4.5(250)</span></i>
-            <i class="fa-solid fa-dollar-sign position-absolute end-0 bottom-0 pb-4"><span
-                style="font-size: 15px; color: #75175e">99</span></i>
-          </div>
-        </div>
+    
+      <!-- about us ends here  -->
+    
+      <div id="sticky-btn">
+        <a href="#Header-Block" class="Pageup-btn-link"><i class="fa-solid fa-angles-up Pageup-btn"></i></a>
       </div>
-      <div class="col-md-4 col-sm-12">
-        <div class="card">
-          <img src="images/course-3.jpg" class="card-img-top" alt="course3" />
-          <div class="card-body position-relative">
-            <i class="fa-solid fa-users position-absolute start-10 top-10"></i><span class="ps-4 text-warning"><small>25
-                Students</small></span>
-            <i class="fa-solid fa-clock position-absolute top-10 end-0"><span class="text-muted"
-                style="font-size: 10px; color: aquamarine; margin-left: 5px">01h 30m</span></i>
-            <p class="card-text">
-              Web Design & Development Courses for beginner
-            </p>
-            <hr />
-            <i class="fa-solid fa-star position-absolute start-10 bottom-0 pb-4"><span
-                style="font-size: 12px; color: fuchsia">4.5(250)</span></i>
-            <i class="fa-solid fa-dollar-sign position-absolute end-0 bottom-0 pb-4"><span
-                style="font-size: 15px; color: #75175e">99</span></i>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <!-- Course Row 2 -->
-    <div class="Course-row2 row row-cols-1 row-cols-md-3 g-4 mt-3">
-      <div class="col-md-4 col-sm-12">
-        <div class="card">
-          <img src="images/course-4.jpg" class="card-img-top" alt="course4" />
-          <div class="card-body position-relative">
-            <i class="fa-solid fa-users position-absolute start-10 top-10"></i><span class="ps-4 text-warning"><small>25
-                Students</small></span>
-            <i class="fa-solid fa-clock position-absolute top-10 end-0"><span class="text-muted"
-                style="font-size: 10px; color: aquamarine; margin-left: 5px">01h 30m</span></i>
-            <p class="card-text">
-              Web Design & Development Courses for beginner
-            </p>
-            <hr />
-            <i class="fa-solid fa-star position-absolute start-10 bottom-0 pb-4"><span
-                style="font-size: 12px; color: fuchsia">4.5(250)</span></i>
-            <i class="fa-solid fa-dollar-sign position-absolute end-0 bottom-0 pb-4"><span
-                style="font-size: 15px; color: #75175e">99</span></i>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 col-sm-12">
-        <div class="card">
-          <img src="images/course-5.jpg" class="card-img-top" alt="course5" />
-          <div class="card-body position-relative">
-            <i class="fa-solid fa-users position-absolute start-10 top-10"></i><span class="ps-4 text-warning"><small>25
-                Students</small></span>
-            <i class="fa-solid fa-clock position-absolute top-10 end-0"><span class="text-muted"
-                style="font-size: 10px; color: aquamarine; margin-left: 5px">01h 30m</span></i>
-            <p class="card-text">
-              Web Design & Development Courses for beginner
-            </p>
-            <hr />
-            <i class="fa-solid fa-star position-absolute start-10 bottom-0 pb-4"><span
-                style="font-size: 12px; color: fuchsia">4.5(250)</span></i>
-            <i class="fa-solid fa-dollar-sign position-absolute end-0 bottom-0 pb-4"><span
-                style="font-size: 15px; color: #75175e">99</span></i>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 col-sm-12">
-        <div class="card">
-          <img src="images/course-6.jpg" class="card-img-top" alt="course6" />
-          <div class="card-body position-relative">
-            <i class="fa-solid fa-users position-absolute start-10 top-10"></i><span class="ps-4 text-warning"><small>25
-                Students</small></span>
-            <i class="fa-solid fa-clock position-absolute top-10 end-0"><span class="text-muted"
-                style="font-size: 10px; color: aquamarine; margin-left: 5px">01h 30m</span></i>
-            <p class="card-text">
-              Web Design & Development Courses for beginner
-            </p>
-            <hr />
-            <i class="fa-solid fa-star position-absolute start-10 bottom-0 pb-4"><span
-                style="font-size: 12px; color: fuchsia">4.5(250)</span></i>
-            <i class="fa-solid fa-dollar-sign position-absolute end-0 bottom-0 pb-4"><span
-                style="font-size: 15px; color: #75175e">99</span></i>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <!-- Courses Section Ends Here  -->
-
-  <!-- Sign-Up Section Starts  -->
+      <!-- Sign-Up Section Starts  -->
 
   <div class="sign-up container-fluid mt-md-5 mt-sm-5">
     <div class="container">
@@ -442,56 +233,6 @@
   </div>
   <!-- Sign-Up Section ends -->
 
-  <!-- Teachers section starts here  -->
-
-  <div class="teachers container mt-5">
-    <div class="heading text-center">
-      <h5>teachers</h5>
-      <h1>Meet Our Teachers</h1>
-
-      <div class="teacher-content row">
-        <div class="col-md-3 col-sm-12 mt-sm-2">
-          <div class="card">
-            <img src="images/team-1.jpg" class="card-img-top" alt="Team1" />
-            <div class="card-body">
-              <h6 class="card-text">Jhon Doe</h6>
-              <p class="card-text">Web Designer</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 col-sm-12 ">
-          <div class="card mt-sm-2">
-            <img src="images/team-2.jpg" class="card-img-top" alt="team-2" />
-            <div class="card-body">
-              <h6 class="card-text">Jhon Doe</h6>
-              <p class="card-text">Web Designer</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 col-sm-12">
-          <div class="card">
-            <img src="images/team-3.jpg" class="card-img-top" alt="team-3" />
-            <div class="card-body rounded-bottom">
-              <h6 class="card-text">Jhon Doe</h6>
-              <p class="card-text">Web Designer</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 col-sm-12">
-          <div class="card">
-            <img src="images/team-4.jpg" class="card-img-top" alt="team-4" />
-            <div class="card-body">
-              <h6 class="card-text">Jhon Doe</h6>
-              <p class="card-text">Web Designer</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Teachers section ends here  -->
-
   <!-- testimonial Review starts here  -->
   <div class="container text-center" id="testimonial">
     <div class="row">
@@ -548,33 +289,9 @@
 
   <!-- testimonial Review ends here  -->
 
-  <!-- Blog Section Starts here  -->
-  <div class="blog container-fluid">
-    <div class="heading text-center">
-      <h5>teachers</h5>
-      <h1>Meet Our Teachers</h1>
-    </div>
-    <div class="blog-row row mt-5">
-      <div class="blog1 col-md-4 col-sm-12 rounded-3">
-        <h4>Web development Tools to Increase</h4>
-        <p>Jan 01, 2022</p>
-      </div>
-      <div class="blog2 col-md-4 col-sm-12 rounded-3">
-        <h4>How to Become frontend developer in 2022</h4>
-        <p>Jan 01, 2022</p>
-      </div>
-      <div class="blog3 col-md-4 col-sm-12 rounded-3">
-        <h4>ReactJS Development Training</h4>
-        <p>Jan 01, 2022</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Blog Section ends here  -->
-
   <!-- Footer Code starts here  -->
 
-  <div class="footer container-fluid mt-5">
+  <div class="footer container-fluid">
     <div class="row">
       <div class="col-md-12 col-sm-12">
         <div class="logo text-center">
