--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
 
   <!-- Footer Code starts here  -->
 
-  <div class="footer container-fluid mt-5">
+  <div class="footer container-fluid" style="margin-top:50px">
     <div class="row">
       <div class="col-md-12 col-sm-12">
         <div class="logo text-center">
